# photogula

./: RASPBERRY_PI_SETUP.md  app.py  camera.py  mock_camera_settings.py  models.py  pyproject.toml  replit.nix  utils.py
attached_assets/: Pasted--main-actions-autofocusdrive-Label-Drive-Nikon-DSLR-Autofocus-Type-TOGGLE-Current-0-main-actions-1739461501051.txt  Pasted--main-actions-autofocusdrive-main-actions-manualfocusdrive-main-actions-viewfinder-main-settings--1739461238335.txt  Pasted-Timelapse-DLSR-with-Gphoto2-synopsis-a-user-can-make-timelapse-images-with-a-connected-camera-with-1739458646845.txt  gPhoto2settings.py
instance/: timelapse.db
static/css/: custom.css
static/js/: capture.js  main.js  preview.js
templates/: base.html  capture.html  dashboard.html  error.html  preview.html  schedules.html  system.html  upload.html
