[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "astral>=3.2",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gphoto2>=2.5.1",
    "gunicorn>=23.0.0",
    "psutil>=6.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
]
